--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
    --cor-de-fundo:#00030C;
 }
 body{
-background-color: var(--cor-de-fundo);
 
+    background-color: var(--cor-de-fundo);
+    color: var(--branco-principal);
 }
