--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ body{
    padding: 0;
 }
 .principal{
- 
-   background-image: url(Background.png);
+ background-image: url(Background.png);
+ background-repeat: no-repeat;
 }
 
 .container{
