--- a/style.css
+++ b/style.css
@@ -30,4 +30,14 @@ body{
    border-radius: 5px;
    padding: 1em;
    color: var(--branco-principal);
+   display: block;
+}
+
+.botao_secundario{
+   background-color: transparent;
+   border: 2px solid var(--branco-principal);
+
+
+
+
 }
