--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-:root {
+:root { #variável de cor
     --branco-principal: #FFFFFF;
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167BF7;
@@ -7,9 +7,9 @@
     --botao-azul-efeito: #3c92fa;
 }
 
-body {
-    background-color: var(--cor-de-fundo);
-    color: var(--branco-principal);
+body { 
+    background-color: var(--cor-de-fundo);#cor de fundo
+    color: var(--branco-principal);#mudar a cor da fonte
     font-family: var(--fonte-principal);
     font-size: 16px;
     font-weight: 400;
