--- a/style.css
+++ b/style.css
@@ -12,16 +12,16 @@ body {
     color: var(--branco-principal);#mudar a cor da fonte
     font-family: var(--fonte-principal);#estilo de fontes
     font-size: 16px;#tamanho da fonte
-    font-weight: 400;#largura da fonte
+    font-weight: 400;#negrito
 }
 
-* {
-    margin: 0;
-    padding: 0;
+* {#seletoruniversal
+    margin: 0;#tamanho da imagem
+    padding: 0;espaçamente
 }
 
 .principal {
-    background-image: url("img/Background.png");
+    background-image: url("Background.png");
     background-repeat: no-repeat;
     background-size: contain;
     align-items: center;
